--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         text-align: center;
         font-weight: 500;
         line-height: 18px;
-        font-size: 0.7em;
+        font-size: 0.8em;
         white-space: nowrap;
         overflow: hidden;
         position: relative;
@@ -259,7 +259,7 @@
     .chart-legend .color-box .value {
         display: block;
     }
-    .chart-legend .color-box:hover::after {
+    /*.chart-legend .color-box:hover::after {
         content: attr(data-tooltip);
         position: absolute;
         top: 0;
@@ -272,7 +272,7 @@
         text-align: center;
         background-color: rgba(0, 0, 0, 0.8);
         z-index: 30;
-    }
+    }*/
     .chart-legend .color-box:hover .value {
         display: none;
     }
