--- a/index.html
+++ b/index.html
@@ -242,24 +242,24 @@
         transition: transform 0.3s ease;
         padding-left: 8px;
     }
-    .chart-legend .color-box {
+    /*.chart-legend .color-box {
         width: 90px;
         height: 18px;
         border-radius: 5px;
         text-align: center;
         font-weight: 500;
         line-height: 18px;
-        font-size: 0.8em;
+        font-size: 0.7em;
         white-space: nowrap;
         overflow: hidden;
         position: relative;
         color: #fff;
         margin-right: 6px;
-    }
+    }*/
     .chart-legend .color-box .value {
         display: block;
     }
-    /*.chart-legend .color-box:hover::after {
+    .chart-legend .color-box:hover::after {
         content: attr(data-tooltip);
         position: absolute;
         top: 0;
@@ -267,12 +267,12 @@
         width: 100%;
         height: 100%;
         color: #fff;
-        font-size: 0.7em;
+        font-size: 0.8em;
         line-height: 18px;
         text-align: center;
         background-color: rgba(0, 0, 0, 0.8);
         z-index: 30;
-    }*/
+    }
     .chart-legend .color-box:hover .value {
         display: none;
     }
