--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
         transition: transform 0.3s ease;
         padding-left: 8px;
     }
-    /*.chart-legend .color-box {
+    .chart-legend .color-box {
+        content: attr(data-tooltip);
         width: 90px;
         height: 18px;
         border-radius: 5px;
@@ -255,7 +256,7 @@
         position: relative;
         color: #fff;
         margin-right: 6px;
-    }*/
+    }
     .chart-legend .color-box .value {
         display: block;
     }
