--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         display: block;
     }
     .chart-legend .color-box:hover::after {
-        content: attr(data-tooltip);
+        content: "";/*attr(data-tooltip);*/
         position: absolute;
         top: 0;
         left: 0;
