--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         text-align: center;
         font-weight: 500;
         line-height: 18px;
-        font-size: 0.7em;
+        font-size: 0.6em;
         white-space: nowrap;
         overflow: hidden;
         position: relative;
@@ -260,7 +260,7 @@
         display: block;
     }
     .chart-legend .color-box:hover::after {
-        content: "";/*attr(data-tooltip);*/
+        content: attr(data-tooltip);
         position: absolute;
         top: 0;
         left: 0;
